tests/sksl/errors/ReservedNameThis.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'this'
1 error
